Update title and text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine Surprise 💖</title>
+  <title>Fun Valentine Page 💖</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
       transform: translateX(10px);
     }
 
-    /* Baby pic */
+    /* Baby image */
     #noMessage {
       display: none;
       text-align: center;
@@ -124,7 +124,7 @@
 
   <!-- Baby pic for NO -->
   <div id="noMessage">
-    <p>Baby says please say yes 💖</p>
+    <p>Baby please say yes 💖</p>
     <img id="babyImage" src="https://clipart-library.com/2023/51-511211_cute-baby-clipart-funny-baby-boy-cute-baby.png" alt="cute baby">
   </div>
 
